Added UI controller to set desired voltage.

--- a/src/main/resources/css/Sequence.css
+++ b/src/main/resources/css/Sequence.css
@@ -23,3 +23,11 @@
 .sequence-control-button-panel {
     -fx-alignment: baseline-right;
 }
+
+.form-field {
+    -fx-background-color: #FFFFFF;
+}
+
+.section {
+    -fx-font-weight: bold;
+}
