--- a/src/main/resources/Sequence.fxml
+++ b/src/main/resources/Sequence.fxml
@@ -1,49 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.GridPane?>
-
-<?import javafx.scene.text.Text?>
-
 <?import java.net.URL?>
 
-<?import javafx.scene.layout.HBox?>
-
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.TilePane?>
-
 <GridPane styleClass="root"
           xmlns="http://javafx.com/javafx/8.0.112"
           xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="ui.controllers.SequenceController">
-    <Text text="Sequence" styleClass="tab-title">
+
+    <GridPane styleClass="form-field">
         <GridPane.columnIndex>0</GridPane.columnIndex>
         <GridPane.rowIndex>0</GridPane.rowIndex>
-    </Text>
-    <Text text="Steps" styleClass="section-title">
-        <GridPane.columnIndex>0</GridPane.columnIndex>
-        <GridPane.rowIndex>1</GridPane.rowIndex>
-    </Text>
-    <TilePane styleClass="steps-pane" id="steps-display">
-        <GridPane.columnIndex>0</GridPane.columnIndex>
-        <GridPane.rowIndex>2</GridPane.rowIndex>
-    </TilePane>
-    <GridPane styleClass="bottom-row">
-        <GridPane.columnIndex>0</GridPane.columnIndex>
-        <GridPane.rowIndex>3</GridPane.rowIndex>
 
-        <HBox styleClass="sequence-information-bar"
-              id="bottomLeftStatusBar">
+        <Text text="Voltage Setpoint" styleClass="section">
             <GridPane.rowIndex>0</GridPane.rowIndex>
             <GridPane.columnIndex>0</GridPane.columnIndex>
-        </HBox>
-        <HBox styleClass="sequence-control-button-panel">
-            <GridPane.columnIndex>1</GridPane.columnIndex>
-            <GridPane.rowIndex>0</GridPane.rowIndex>
-            <Button text="New Step" id="new-step-button"
-                    onAction="#displayNewStepForm"/>
-            <Button text="Start" styleClass="start-button" disable="true"/>
-            <Button text="Stop" styleClass="stop-button" disable="true" />
-        </HBox>
+        </Text>
+        <Text text="Enter the desired voltage">
+            <GridPane.rowIndex>1</GridPane.rowIndex>
+            <GridPane.columnIndex>0</GridPane.columnIndex>
+        </Text>
+
+        <TextField
+                fx:id="voltageTextField"
+                id="voltage-text-field"
+                onAction="#handleTextFieldChanged">
+            <GridPane.rowIndex>2</GridPane.rowIndex>
+            <GridPane.columnIndex>0</GridPane.columnIndex>
+        </TextField>
+
+        <Slider min="0" max="28" showTickLabels="true" showTickMarks="true"
+                majorTickUnit="5" minorTickCount="1" fx:id="voltageSlider"
+                id="voltage-slider"
+                >
+            <GridPane.rowIndex>3</GridPane.rowIndex>
+            <GridPane.columnIndex>0</GridPane.columnIndex>
+        </Slider>
+
+    </GridPane>
+
+    <GridPane styleClass="sequence-control-button-panel">
+        <GridPane.columnIndex>0</GridPane.columnIndex>
+        <GridPane.rowIndex>1</GridPane.rowIndex>
+        <Button text="Refresh" />
+        <Button text="Go" />
     </GridPane>
 
     <stylesheets>
