--- a/src/main/resources/Sequence.fxml
+++ b/src/main/resources/Sequence.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.TilePane?>
 <GridPane styleClass="root"
           xmlns="http://javafx.com/javafx/8.0.112"
           xmlns:fx="http://javafx.com/fxml/1"
@@ -43,12 +44,12 @@
 
     </GridPane>
 
-    <GridPane styleClass="sequence-control-button-panel">
+    <TilePane styleClass="sequence-control-button-panel">
         <GridPane.columnIndex>0</GridPane.columnIndex>
         <GridPane.rowIndex>1</GridPane.rowIndex>
         <Button text="Refresh" />
-        <Button text="Go" />
-    </GridPane>
+        <Button text="Go" onAction="#handleGoButtonClicked"/>
+    </TilePane>
 
     <stylesheets>
         <URL value="@css/Sequence.css" />
