--- a/src/main/resources/Sequence.fxml
+++ b/src/main/resources/Sequence.fxml
@@ -8,46 +8,62 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <GridPane styleClass="root"
           xmlns="http://javafx.com/javafx/8.0.112"
           xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="ui.controllers.SequenceController">
 
-    <GridPane styleClass="form-field">
+    <Text text="Voltage Setpoint" styleClass="section">
         <GridPane.columnIndex>0</GridPane.columnIndex>
         <GridPane.rowIndex>0</GridPane.rowIndex>
+    </Text>
 
-        <Text text="Voltage Setpoint" styleClass="section">
-            <GridPane.rowIndex>0</GridPane.rowIndex>
-            <GridPane.columnIndex>0</GridPane.columnIndex>
-        </Text>
-        <Text text="Enter the desired voltage">
-            <GridPane.rowIndex>1</GridPane.rowIndex>
-            <GridPane.columnIndex>0</GridPane.columnIndex>
-        </Text>
+    <HBox styleClass="form-field">
+        <GridPane.columnIndex>0</GridPane.columnIndex>
+        <GridPane.rowIndex>1</GridPane.rowIndex>
 
-        <TextField
-                fx:id="voltageTextField"
-                id="voltage-text-field"
-                onAction="#handleTextFieldChanged">
-            <GridPane.rowIndex>2</GridPane.rowIndex>
-            <GridPane.columnIndex>0</GridPane.columnIndex>
-        </TextField>
+        <VBox styleClass="parameter-box">
+            <Slider min="0"
+                    max="28"
+                    showTickMarks="true"
+                    majorTickUnit="5"
+                    minorTickCount="1"
+                    showTickLabels="true"
+                    fx:id="voltageSlider"
+                    id="voltage-slider"
+                    styleClass="slider"/>
+            <TextField fx:id="voltageTextField"
+                       id="voltage-text-field"
+                       onAction="#handleVoltageTextFieldChanged"
+                       styleClass="parameter-text-field"/>
+            <Text text="Desired Voltage"/>
+        </VBox>
 
-        <Slider min="0" max="28" showTickLabels="true" showTickMarks="true"
-                majorTickUnit="5" minorTickCount="1" fx:id="voltageSlider"
-                id="voltage-slider"
-                >
-            <GridPane.rowIndex>3</GridPane.rowIndex>
-            <GridPane.columnIndex>0</GridPane.columnIndex>
-        </Slider>
+        <VBox styleClass="parameter-box">
+            <Slider min="0"
+                    max="1e-6"
+                    showTickMarks="true"
+                    majorTickUnit="5e-7"
+                    minorTickCount="5"
+                    id="pressure-slider"
+                    styleClass="slider"
+                    fx:id="pressureSlider"/>
+            <TextField fx:id="pressureTextField"
+                       id="pressure-text-field"
+                       onAction="#handlePressureTextFieldChanged"
+                       styleClass="parameter-text-field"/>
+            <Text text="Maximum Pressure" />
+        </VBox>
 
-    </GridPane>
+    </HBox>
 
     <TilePane styleClass="sequence-control-button-panel">
         <GridPane.columnIndex>0</GridPane.columnIndex>
-        <GridPane.rowIndex>1</GridPane.rowIndex>
-        <Button text="Go" onAction="#handleGoButtonClicked" fx:id="goButton"/>
+        <GridPane.rowIndex>2</GridPane.rowIndex>
+        <Button text="Go" onAction="#handleGoButtonClicked" fx:id="goButton"
+                id="go-button"/>
     </TilePane>
 
     <stylesheets>
